plugin_LTLIBRARIES = libgstaudiodescription.la

# sources used to compile this plug-in
libgstaudiodescription_la_SOURCES = gstaudiodescriptionplugin.c gstwhp198dec.c gstwhp198dec.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstaudiodescription_la_CFLAGS = $(GST_CFLAGS)
libgstaudiodescription_la_LIBADD = $(GST_LIBS)
libgstaudiodescription_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstaudiodescription_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)

